--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -1,10 +1,10 @@
 {
   "mainPageBanner": {
     "title": "Найкращі Розхідники",
+    "PrivateChannel": "Приватний канал",
     "extra": {
       "joinToUs": "Доєднатися до нашої спільноти",
-      "ContactToUs": "Звʼязатися з менеджером",
-      "PrivateChannel": "Приватний канал"
+      "ContactToUs": "Звʼязатися з менеджером"
     },
     "subtitle": {
       "created2BM": "НАЙКРАЩІ РОЗХІДНИКИ",
@@ -46,7 +46,7 @@
   "send": "Надішліть точну суму",
   "warninginfo": "В іншому випадку система не побачить платіж, а це означає, що ви не отримаєте своє замовлення і втратите гроші!",
   "paymentdone": "Замовлення сплачено",
-  "downloadkeys": "Завантажити Замовлення",
+  "downloadkeys": "Отримати Замовлення",
   "rules1": "1. Гарантія на товар 30 хвилин.",
   "rules2": "2. Використовуйте проксі під ГЕО акаунта.",
   "rules3": "3. Прийнятий товар поверненню не підлягає.",
@@ -89,5 +89,7 @@
   "allproducts": "Усі продукти",
   "pageproducts": "Товари | Найкращі розхідники для Вас та Вашої команди",
   "invalidinput": "Недійсний формат",
-  "uniquizer": "Унікалізатор"
+  "uniquizer": "Унікалізатор",
+  "typeProxy": "Тип прокси",
+  "geoProxy": "Гео прокси"
 }
