--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -22,12 +22,14 @@
   "products": "Товари",
   "buy": "Придбати",
   "quantity": "Кількість",
+  "cancel-order": "Скасувати замовлення",
   "pcs": "1 шт",
   "contacts": "Контакти",
   "replacementrules": "Правила заміни",
   "replacementhelmet": "Правила заміни | Найкращі розхідники для Вас та Вашої команди",
   "contactinfo": "З усіх питань заміни / обміну / додавання вашого товару на платформу",
   "contactshelmet": "Контакти | Найкращі розхідники для Вас та Вашої команди",
+  "tothemain": "На головну",
   "cart": "Кошик",
   "emptyCart": "Ваш кошик порожній",
   "continueshopping": "Продовжити покупки",
@@ -90,6 +92,6 @@
   "pageproducts": "Товари | Найкращі розхідники для Вас та Вашої команди",
   "invalidinput": "Недійсний формат",
   "uniquizer": "Унікалізатор",
-  "typeProxy": "Тип прокси",
-  "geoProxy": "Гео прокси"
+  "categoryItem": "Категорія",
+  "geoItem": "Гео"
 }
