add content for payment page

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -44,9 +44,11 @@
   "orderhelmet": "Order | The best consumables for you and your team",
   "amounttobepaid": "Amount to be paid",
   "paymentdetails": "Payment details",
+  "purposepayment": "Purpose of payment: Provision of information services",
   "warning": "Warning!",
   "send": "Send the exact amount",
   "warninginfo": "Otherwise, the system will not see the payment, which means you will not receive your order and lose your money!",
+  "bankmethod": "Bank Transfer",
   "paymentdone": "Order paid",
   "downloadkeys": "Get the Order",
   "rules1": "1. Product is guaranteed for 30 minutes.",
