--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -44,9 +44,11 @@
   "orderhelmet": "Замовлення | Найкращі розхідники для Вас та Вашої команди",
   "amounttobepaid": "Сума до сплати",
   "paymentdetails": "Реквізити для оплати",
+  "purposepayment": "Призначення платежу: Надання інформаційних послуг",
   "warning": "Увага!",
   "send": "Надішліть точну суму",
   "warninginfo": "В іншому випадку система не побачить платіж, а це означає, що ви не отримаєте своє замовлення і втратите гроші!",
+  "bankmethod": "Банківський переказ",
   "paymentdone": "Замовлення сплачено",
   "downloadkeys": "Отримати Замовлення",
   "rules1": "1. Гарантія на товар 30 хвилин.",
