connect advertisement to db

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -46,8 +46,11 @@
   "paymentdetails": "Payment details",
   "purposepayment": "Purpose of payment: Provision of information services",
   "warning": "Warning!",
-  "send": "Send the exact amount",
+  "systemindent": "Our system identifies your payment by its unique amount",
+  "send": "Transfer exactly the amount specified below",
   "warninginfo": "Otherwise, the system will not see the payment, which means you will not receive your order and lose your money!",
+  "warninginfo2": "Remember, Binance charges a 1 USDT fee per transfer, so when sending from Binance, add 1 USDT to the transfer amount.",
+  "warninginfo3": "If you do not transfer the exact amount, your payment will not be credited, and you will need to contact our support team.",
   "bankmethod": "Bank Transfer",
   "paymentdone": "Order paid",
   "downloadkeys": "Get the Order",
