--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -46,8 +46,11 @@
   "paymentdetails": "Реквізити для оплати",
   "purposepayment": "Призначення платежу: Надання інформаційних послуг",
   "warning": "Увага!",
-  "send": "Надішліть точну суму",
+  "systemindent": "Наша система ідентифікує ваш платіж за його унікальною сумою.",
+  "send": "Перекажіть точно вказану суму",
   "warninginfo": "В іншому випадку система не побачить платіж, а це означає, що ви не отримаєте своє замовлення і втратите гроші!",
+  "warninginfo2": "Пам’ятайте, що Binance стягує 1 USDT за кожний переказ, тому при відправці з Binance додайте 1 USDT до суми переказу.",
+  "warninginfo3": "Якщо ви відправите суму неточно, ваш платіж не буде зарахований, і вам доведеться звернутися до нашої служби підтримки.",
   "bankmethod": "Банківський переказ",
   "paymentdone": "Замовлення сплачено",
   "downloadkeys": "Отримати Замовлення",
